--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -9,20 +9,6 @@
     "## Project: Write an Algorithm for a Dog Identification App \n",
     "\n",
     "---\n",
-    "\n",
-    "In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'(IMPLEMENTATION)'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section, and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully! \n",
-    "\n",
-    "> **Note**: Once you have completed all of the code implementations, you need to finalize your work by exporting the Jupyter Notebook as an HTML document. Before exporting the notebook to html, all of the code cells need to have been run so that reviewers can see the final implementation and output. You can then export the notebook by using the menu above and navigating to **File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission.\n",
-    "\n",
-    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.\n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut.  Markdown cells can be edited by double-clicking the cell to enter edit mode.\n",
-    "\n",
-    "The rubric contains _optional_ \"Stand Out Suggestions\" for enhancing the project beyond the minimum requirements. If you decide to pursue the \"Stand Out Suggestions\", you should include the code in this Jupyter notebook.\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n",
     "### Why We're Here \n",
     "\n",
     "In this notebook, you will make the first steps towards developing an algorithm that could be used as part of a mobile or web app.  At the end of this project, your code will accept any user-supplied image as input.  If a dog is detected in the image, it will provide an estimate of the dog's breed.  If a human is detected, it will provide an estimate of the dog breed that is most resembling.  The image below displays potential sample output of your finished project (... but we expect that each student's algorithm will behave differently!). \n",
@@ -48,8 +34,6 @@
     "## Step 0: Import Datasets\n",
     "\n",
     "Make sure that you've downloaded the required human and dog datasets:\n",
-    "\n",
-    "**Note: if you are using the Udacity workspace, you *DO NOT* need to re-download these - they can be found in the `/data` folder as noted in the cell below.**\n",
     "\n",
     "* Download the [dog dataset](https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip).  Unzip the folder and place it in this project's home directory, at the location `/dog_images`. \n",
     "\n",
@@ -251,9 +235,7 @@
     "human_files_short = human_files[:100]\n",
     "dog_files_short = dog_files[:100]\n",
     "\n",
-    "#-#-# Do NOT modify the code above this line. #-#-#\n",
-    "\n",
-    "## TODO: Test the performance of the face_detector algorithm \n",
+    "## Test the performance of the face_detector algorithm \n",
     "## on the images in human_files_short and dog_files_short.\n",
     "human_face_count = 0\n",
     "dog_face_count = 0\n",
@@ -274,17 +256,6 @@
    "metadata": {},
    "source": [
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on `human_files_short` and `dog_files_short`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### (Optional) \n",
-    "### TODO: Test performance of anotherface detection algorithm.\n",
-    "### Feel free to use as many code cells as needed."
    ]
   },
   {
@@ -379,8 +350,6 @@
     "    Returns:\n",
     "        Index corresponding to VGG-16 model's prediction\n",
     "    '''\n",
-    "    \n",
-    "    ## TODO: Complete the function.\n",
     "    ## Load and pre-process an image from the given img_path\n",
     "    ## Return the *index* of the predicted class for that image\n",
     "    \n",
@@ -505,7 +474,7 @@
     }
    ],
    "source": [
-    "### TODO: Test the performance of the dog_detector function\n",
+    "### Test the performance of the dog_detector function\n",
     "### on the images in human_files_short and dog_files_short.\n",
     "from tqdm import tqdm\n",
     "human_face_count = 0\n",
@@ -527,17 +496,6 @@
    "metadata": {},
    "source": [
     "We suggest VGG-16 as a potential network to detect dog images in your algorithm, but you are free to explore other pre-trained networks (such as [Inception-v3](http://pytorch.org/docs/master/torchvision/models.html#inception-v3), [ResNet-50](http://pytorch.org/docs/master/torchvision/models.html#id3), etc).  Please use the code cell below to test other pre-trained PyTorch models.  If you decide to pursue this _optional_ task, report performance on `human_files_short` and `dog_files_short`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### (Optional) \n",
-    "### TODO: Report the performance of another pre-trained network.\n",
-    "### Feel free to use as many code cells as needed."
    ]
   },
   {
@@ -614,7 +572,7 @@
     "from torchvision import datasets\n",
     "import torchvision.transforms as transforms\n",
     "\n",
-    "### TODO: Write data loaders for training, validation, and test sets\n",
+    "### Write data loaders for training, validation, and test sets\n",
     "## Specify appropriate transforms, and batch_sizes\n",
     "batch_size = 20\n",
     "loaders_scratch = {}\n",
@@ -772,8 +730,6 @@
     "        \n",
     "        return x\n",
     "\n",
-    "#-#-# You so NOT have to modify the code below this line. #-#-#\n",
-    "\n",
     "# instantiate the CNN\n",
     "model_scratch = Net()\n",
     "\n",
@@ -850,10 +806,10 @@
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "### TODO: select loss function\n",
+    "### select loss function\n",
     "criterion_scratch = nn.CrossEntropyLoss()\n",
     "\n",
-    "### TODO: select optimizer\n",
+    "### select optimizer\n",
     "optimizer_scratch = optim.Adam(model_scratch.parameters(), lr=0.001)"
    ]
   },
@@ -938,7 +894,7 @@
     "            valid_loss\n",
     "            ))\n",
     "        \n",
-    "        ## TODO: save the model if validation loss has decreased\n",
+    "        ## save the model if validation loss has decreased\n",
     "        if valid_loss <= valid_loss_min:\n",
     "            print('Validation loss decreased ({:.6f} --> {:.6f}).  Saving model ...'.format(\n",
     "            valid_loss_min,\n",
@@ -1148,7 +1104,7 @@
     }
    ],
    "source": [
-    "## TODO: Specify data loaders\n",
+    "## Specify data loaders\n",
     "batch_size = 20\n",
     "loaders_transfer = {}\n",
     "\n",
@@ -1306,7 +1262,7 @@
     "# check if CUDA is available\n",
     "use_cuda = torch.cuda.is_available()\n",
     "\n",
-    "## TODO: Specify model architecture \n",
+    "## Specify model architecture \n",
     "print('model attributes-', model_transfer.classifier[6].in_features)\n",
     "print('classes-', len(classes))\n",
     "\n",
@@ -1488,7 +1444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Write a function that takes a path to an image as input\n",
+    "### A function that takes a path to an image as input\n",
     "### and returns the dog breed that is predicted by the model.\n",
     "\n",
     "# list of class names by index, i.e. a name can be accessed like class_names[0]\n",
@@ -1631,8 +1587,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TODO: Write your algorithm.\n",
-    "### Feel free to use as many code cells as needed.\n",
+    "### Write your own algorithm.\n",
+    "### Feel free to use the algorithm provided below as needed.\n",
     "import cv2      \n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -1891,11 +1847,8 @@
     }
    ],
    "source": [
-    "## TODO: Execute your algorithm from Step 6 on\n",
+    "## Execute your algorithm from Step 6 on\n",
     "## at least 6 images on your computer.\n",
-    "## Feel free to use as many code cells as needed.\n",
-    "\n",
-    "## suggested code, below\n",
     "for file in np.hstack((human_files[100:104], dog_files[500:504])):\n",
     "    run_app(file)"
    ]
@@ -2168,7 +2121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
